--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gideon Baik",
   "license": "MIT",
   "dependencies": {
+    "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
@@ -21,6 +22,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
+    "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "webpack": "^3.10.0"
   },
